[bugfix] fix Tabs style on IE (#223)
* [bugfix][#166081291] fix flex on Tabs stories for IE

* [bugfix][#166081291] fix activeItem bottom border on Tabs

* [bugfix][#166081291] fix margin between tabs

--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -64,10 +64,9 @@
       display: flex;
       overflow: hidden;
       text-overflow: ellipsis;
-      margin-left: $space-3;
+      margin-left: $space-5;
       box-sizing: border-box;
-      position: relative;
-      bottom: -1px;
+      border-bottom: 2px solid transparent;
 
       &:nth-child(1) {
         // the first child have no margin-left child.
@@ -91,6 +90,7 @@
     .activeItem {
       color: $indigo;
       cursor: default;
+      border-bottom: 2px solid $indigo;
 
       label {
         cursor: default;
@@ -98,14 +98,6 @@
 
       &:hover {
         color: $indigo;
-      }
-
-      &::after {
-        content: "";
-        width: 100%;
-        border-bottom: 2px solid $indigo;
-        position: absolute;
-        bottom: 0;
       }
     }
   }
