--- a/src/stories/tabs/tabs.stories.scss
+++ b/src/stories/tabs/tabs.stories.scss
@@ -13,14 +13,13 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  margin: -$space-3 0 0 0;
 }
 
 .box {
   border: solid 0 #828282;
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: 1 1 auto;
   margin: $space-3 0 0 0;
 }
 
